--- a/FinPlan.Web/Components/Pages/home.razor
+++ b/FinPlan.Web/Components/Pages/home.razor
@@ -75,7 +75,7 @@
     </h4>
     <div class="@(isMaximized ? "video-maximized" : "video-compressed")">
         <div class="video-container position-relative">
-            <video controls preload="metadata" class="@(isMaximized ? "w-100" : "")" style="@(isMaximized ? "max-width: 100%;" : "max-width: 400px; width: 100%;")" poster="/images/video-poster.png">
+            <video controls preload="none" class="@(isMaximized ? "w-100" : "")" style="@(isMaximized ? "max-width: 100%;" : "max-width: 400px; width: 100%;")" poster="/images/narrator.png">
                 <source src="https://rewealthensorage2.blob.core.windows.net/training/ReWealthenBriefIntroSingleScene.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
